# mcp-ee

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  env.example  install.sh  pyproject.toml  requirements.txt  run.py
src/: api_client.py  auth.py  main.py  tools.py
